[tool.poetry]
name = "test_repo_action"
version = "0.0.1"
description = ""
authors = ["Dab <davidaugusto@hellotherma.com>"]

[tool.poetry.dependencies]
openai = "^0.27.2"
cachetools = "^5.3.0"


[tool.poetry.dev-dependencies]
robusta-cli = "^0.10.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"