[tool.poetry]
name = "test_repo_action"
version = "0.0.1"
description = ""
authors = ["Dab <git@github.com:IamShakings/TestRepo.git>"]

[tool.poetry.dependencies]
python = "^3.8.10"


[tool.poetry.dev-dependencies]
robusta-cli = "^0.10.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"